; ModuleID = '/home/carl/AnghaBench/git/extr_grep.c_append_grep_pat.c'
source_filename = "/home/carl/AnghaBench/git/extr_grep.c_append_grep_pat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.grep_opt = type { i32 }
%struct.grep_pat = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @append_grep_pat(%struct.grep_opt* %0, i8* %1, i64 %2, i8* %3, i32 %4, i32 %5) #0 {
  %7 = alloca %struct.grep_opt*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca %struct.grep_pat*, align 8
  store %struct.grep_opt* %0, %struct.grep_opt** %7, align 8
  store i8* %1, i8** %8, align 8
  store i64 %2, i64* %9, align 8
  store i8* %3, i8** %10, align 8
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %14 = load i8*, i8** %8, align 8
  %15 = load i64, i64* %9, align 8
  %16 = load i8*, i8** %10, align 8
  %17 = load i32, i32* %11, align 4
  %18 = load i32, i32* %12, align 4
  %19 = call %struct.grep_pat* @create_grep_pat(i8* %14, i64 %15, i8* %16, i32 %17, i32 %18, i32 0)
  store %struct.grep_pat* %19, %struct.grep_pat** %13, align 8
  %20 = load %struct.grep_opt*, %struct.grep_opt** %7, align 8
  %21 = getelementptr inbounds %struct.grep_opt, %struct.grep_opt* %20, i32 0, i32 0
  %22 = load %struct.grep_pat*, %struct.grep_pat** %13, align 8
  %23 = call i32 @do_append_grep_pat(i32* %21, %struct.grep_pat* %22)
  ret void
}

declare dso_local %struct.grep_pat* @create_grep_pat(i8*, i64, i8*, i32, i32, i32) #1

declare dso_local i32 @do_append_grep_pat(i32*, %struct.grep_pat*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
